--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"http://MrOpossum.github.io/MaeVille",
+  "homepage": "http://MrOpossum.github.io/Maeville",
   "name": "maeville",
   "version": "0.1.0",
   "private": true,
