--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
       "last 1 safari version"
     ]
   },
-  "browser": {
-    "http": false
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
