--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "bson": "^4.2.2",
     "chokidar": "^3.4.3",
     "js-file-download": "^0.4.12",
     "loader-runner": "^2.4.0",
